# ASE_Biaspot

./: README.md  pyproject.toml
.github/workflows/: ci.yml  docs.yml
docs/: CHANGELOG.md  conf.py  index.rst  quickstart.md  references.rst  requirements.txt
docs/api/: afir.rst  calculator.rst  context.rst  core.rst  factory.rst  geometry.rst  index.rst
examples/: example_afir.py  example_callable_distance.py  example_delta_learning.py  example_dict_terms.py  example_torch_learnable.py
src/ase_biaspot/: __init__.py  _compat.py  afir.py  calculator.py  context.py  core.py  factory.py  geometry.py
tests/: test_0_1_10_fixes.py  test_0_1_12_fixes.py  test_0_1_4_fixes.py  test_0_1_6_fixes.py  test_0_1_7_fixes.py  test_0_1_9_fixes.py  test_afir.py  test_bug_fixes.py  test_calculator.py  test_core.py  test_factory.py  test_geometry.py  test_torch_terms.py
